# PathForge

./: .design  .gitignore  .readthedocs.yaml  AGENTS.md  HDF5_structure.md  LICENSE  README.md  config.toml  config.yaml  design.md  example_config.yaml  pyproject.toml  supported_slide_files.md
artifacts/tmp_sish_validation/: meta.pkl  veb.pkl
configs/: config.example.yaml  feature_config.yaml
default_config/: README.md  benchmark_classification.yaml  benchmark_regression.yaml  benchmark_slide_retrieval.yaml  benchmark_survival_continuous.yaml  benchmark_survival_discrete.yaml  feature_extraction_only.yaml  optimize_classification.yaml  optimize_regression.yaml  optimize_slide_retrieval.yaml  optimize_survival_continuous.yaml  optimize_survival_discrete.yaml  parallel_benchmark.yaml  parallel_optimization.yaml
docker/: .design  entrypoint.sh
docs/: HDF5_structure.md  architecture.rst  backends.rst  conf.py  configuration.rst  data_preparation.rst  design.md  index.rst  installation.rst  introduction.rst  mil_options.rst  mkdocs.yml  quickstart.rst  scaling.rst  slide-retrieval-results-and-metrics.md  slide_retrieval_h5_structure.md  supported_slide_files.md  task_outputs.rst  testing.rst  troubleshooting.rst
docs/api/: adapters.rst  artifacts.rst  cli.rst  config.rst  core.rst  evaluation.rst  examples.rst  execution.rst  index.rst  inference.rst  optimization.rst  policy.rst  slide_retrieval.rst  training.rst  utils.rst  visualization.rst
docs/docs/: design-principles.md
docs/tutorials/: benchmarking.rst  cli.rst  end_to_end.rst  feature_extraction.rst  index.rst  inference.rst  model_packaging.rst  optimization.rst  slide_retrieval.rst
experiments/cbir_lumc_tissue/: annotations_key_diag_test.csv  dataset_config.json
scripts/: run_distributed_smoke.sbatch  run_full_test_suite.sbatch
src/pathbench/adapters/: __init__.py  losses.py  tcga_tools.py
src/pathbench/api/: base.py
src/pathbench/benchmarking/: registry.py
src/pathbench/cli/: app.py  base.py  benchmark.py  benchmark_run.py  common.py  evaluate.py  evaluate_run.py  feature_extraction.py  feature_extraction_slide.py  features_run.py  features_slide.py  infer_run.py  inference.py  mean_rgb.py  optimize.py  optimize_run.py  report_tiles.py  retrieval_mean_rgb.py  retrieval_representations.py  retrieval_sish_vqvae.py  slide_retrieval_representations.py  tiles_report.py  visualize.py  visualize_run.py
src/pathbench/config/: __init__.py  base.py  config.py
src/pathbench/core/: base.py  explainer_base.py  registry.py
src/pathbench/inference/: __init__.py  heatmaps.py  model_package.py
src/pathbench/optimization/: .design  optuna_runner.py
src/pathbench/policy/: base.py  benchmarking.py  feature_extraction.py  inference.py  optimization.py  utils.py
src/pathbench/refactor/: pbms.py  pbss_search.py
src/pathbench/slide_processing/: base.py  lazyslide.py  utils.py
src/pathbench/slide_retrieval/: __init__.py  io.py  mean_rgb.py  sish_precompute.py  types.py
src/pathbench/training/: base.py  lightning.py  metrics.py  simple.py  sklearn_trainer.py  utils.py
src/pathbench/utils/: constants.py  registries.py  registry.py  serialization.py  splitting.py  test_samples.py
src/pathforge/adapters/: losses.py  tcga_tools.py
src/pathforge/cli/: app.py  base.py  benchmark_run.py  evaluate_run.py  execution.py  features_slide.py  inference.py  optimize_run.py  report_tiles.py  retrieval_mean_rgb.py  retrieval_sish_vqvae.py  visualize_run.py
src/pathforge/config/: config.py
src/pathforge/core/: registry.py
src/pathforge/execution/: __init__.py  distributed.py
src/pathforge/inference/: __init__.py  heatmaps.py  model_package.py
src/pathforge/policy/: base.py  benchmarking.py  feature_extraction.py  inference.py  optimization.py  utils.py
src/pathforge/refactor/: pbms.py
src/pathforge/slide_retrieval/: __init__.py  hyperparams.py  io.py
tests/: TESTING.md  __init__.py  conftest.py
tests/integration/: test_backend_training_visualizations.py  test_sklearn_slide_trainer.py  test_slide_retrieval.py
tests/interface/: README.md  test_adapter_structure.py  test_base_contracts.py  test_concrete_inheritance.py  test_dependency_boundaries.py  test_no_duplicate_implementations.py  test_public_api_docs_and_types.py  test_task_registry_contracts.py  test_tutorial_coverage.py
tests/smoke/: README.md  __init__.py  _smoke_dataset.py  _smoke_training.py  conftest.py  test_backend_metric_visualizations_smoke.py  test_benchmark_cli.py  test_benchmarking_workflow_smoke.py  test_evaluate_cli.py  test_feature_extract_cli.py  test_feature_extraction_smoke.py  test_gtex_pipeline_smoke.py  test_hf_feature_workflows.py  test_hf_mil_benchmarking.py  test_hf_survival_optuna_inference.py  test_mil_pipeline.py  test_mlp_slide_smoke.py  test_optimize_cli.py  test_sklearn_slide_smoke.py  test_slide_retrieval_benchmark_smoke.py  test_slide_retrieval_e2e_smoke.py  test_slide_retrieval_visualization_smoke.py
tests/unit/: test_abc_shapes.py  test_adapter_losses.py  test_annotations.py  test_api_docs_coverage.py  test_backend_usability.py  test_bag_dataset.py  test_bag_dataset_strategies.py  test_bag_schema_collate.py  test_benchmark_cli.py  test_cli_base.py  test_config.py  test_config_validation.py  test_console_scripts.py  test_csv_annotations.py  test_dataset_factory.py  test_default_configs.py  test_distributed_execution.py  test_docs_build.py  test_docs_cli_consistency.py  test_docs_code_examples.py  test_evaluate_visualize_cli.py  test_evaluation_config.py  test_evaluation_metrics.py  test_evaluation_orchestrator.py  test_evaluation_registry.py  test_experiment.py  test_feature_extraction_policy.py  test_feature_extraction_policy_report.py  test_features_policy_resolve_tissue.py  test_features_slide_cli.py  test_h5_descriptors.py  test_h5_thumbnail.py  test_h5_tiles_and_features.py  test_h5_tissue.py  test_hshr_features_representation.py  test_infer_cli.py  test_inference_heatmaps.py  test_kaplan_meier.py  test_lazyslide_backend_conversions.py  test_lazyslide_backend_visualization.py  (+64 more)
(+291 files in other folders)
