# pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathbench"
version = "0.1.0"
description = "PathBench 2.0"
authors = [{ name = "Siemen Brussee" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "PyYAML",
    "pydantic>=2.5,<3.0",
    "h5py",
    "tqdm",
    "torch",
    "pytorch-lightning",
    "optuna",
    "shapely",
    "transformers[torch]>=5.2.0",
    "pillow>=12.0.0",
    "reportlab>=4.4.10",
    "einops>=0.8.2",
    "einops-exts>=0.0.4",
]

[project.optional-dependencies]
# ---- backends / heavier stacks ----
lazyslide = [
    "lazyslide>=0.10.0",
    "wsidata",
    "timm",
    "geopandas",
    "anndata>=0.10.9",
]

cu128 = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio==2.9.1",
]

mil-backends = [
    "torchmil",
    "torchmetrics",
    "torchsurv",
]
gnn = ["torch-geometric>=2.5"]
hf = [
    "huggingface_hub>=1.0",
    "typer",
]
docs = ["mkdocs-material>=9.5"]

dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
pathbench-benchmark = "pathbench.cli.benchmark:main"
pathbench-optimize = "pathbench.cli.optimize:main"
pathbench-features = "pathbench.cli.feature_extraction:main"
pathbench-infer = "pathbench.cli.inference:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
markers = [
    "smoke: quick high-level sanity checks",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", extra = "cu128" }]
torchvision = [{ index = "pytorch-cu128", extra = "cu128" }]
torchaudio = [{ index = "pytorch-cu128", extra = "cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
