# pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathbench"
version = "0.1.0"
description = "PathBench 2.0"
authors = [{ name = "Siemen Brussee" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "openpyxl",
    "scikit-learn",
    "PyYAML",
    "pydantic>=2.5,<3.0",
    "h5py",
    "tqdm",
    "torch",
    "pytorch-lightning",
    "optuna",
    "shapely",
    "transformers==4.46.1",
    "pillow>=12.0.0",
    "reportlab>=4.4.10",
    "einops>=0.8.2",
    "einops-exts>=0.0.4",
    "torchstain>=1.4.1",
    "typer",
]

[project.optional-dependencies]
lazyslide = [
    "lazyslide>=0.10.0",
    "wsidata",
    "timm",
    "geopandas",
    "anndata>=0.10.9",
]

cu128 = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio==2.9.1",
]

survival = ["scikit-survival"]
gnn = ["torch-geometric>=2.5"]
hf = [
    "huggingface_hub>=0.25,<1.0",
]

dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
pathbench = "pathbench.cli.app:main"
pathbench-benchmark = "pathbench.cli.benchmark_run:main"
pathbench-evaluate = "pathbench.cli.evaluate_run:main"
pathbench-optimize = "pathbench.cli.optimize_run:main"
pathbench-features = "pathbench.cli.features_run:main"
pathbench-mean-rgb = "pathbench.cli.retrieval_mean_rgb:main"
pathbench-infer = "pathbench.cli.infer_run:main"
pathbench-visualize = "pathbench.cli.visualize_run:main"
pathbench-slide-retrieval-representations = "pathbench.cli.retrieval_representations:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
markers = [
    "smoke: quick high-level sanity checks",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", extra = "cu128" }]
torchvision = [{ index = "pytorch-cu128", extra = "cu128" }]
torchaudio = [{ index = "pytorch-cu128", extra = "cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
