# pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathforge"
version = "0.1.0"
description = "PathForge 2.0"
authors = [{ name = "Siemen Brussee" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "openpyxl",
    "scikit-learn",
    "PyYAML",
    "pydantic>=2.5,<3.0",
    "h5py",
    "tqdm",
    "torch",
    "pytorch-lightning",
    "optuna",
    "shapely",
    "transformers==4.46.1",
    "pillow>=12.0.0",
    "reportlab>=4.4.10",
    "einops>=0.8.2",
    "einops-exts>=0.0.4",
    "torchstain>=1.4.1",
    "scikit-survival>=0.27.0",
    "plotly",
    "kaleido",
    "typer",
    "lazyslide>=0.10.0",
    "wsidata",
    "timm",
    "geopandas",
    "anndata>=0.10.9",
]

[project.optional-dependencies]
cu128 = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio==2.9.1",
]

# ---- backends / heavier stacks ----
mil-backends = [
    "torchmil",
    "torchmetrics",
    "torchsurv",
    "pycox",
]
survival = ["scikit-survival"]
tcga = ["tcga-tools"]
gnn = ["torch-geometric>=2.5"]
hf = [
    "huggingface_hub>=0.25,<1.0",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.25",
]

dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
]

[project.scripts]
pathforge = "pathforge.cli.app:main"
pathforge-benchmark = "pathforge.cli.benchmark_run:main"
pathforge-evaluate = "pathforge.cli.evaluate_run:main"
pathforge-optimize = "pathforge.cli.optimize_run:main"
pathforge-features = "pathforge.cli.features_run:main"
pathforge-mean-rgb = "pathforge.cli.retrieval_mean_rgb:main"
pathforge-infer = "pathforge.cli.infer_run:main"
pathforge-infer-model = "pathforge.cli.inference:main"
pathforge-visualize = "pathforge.cli.visualize_run:main"
pathforge-slide-retrieval-representations = "pathforge.cli.retrieval_representations:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
markers = [
    "smoke: quick high-level sanity checks",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", extra = "cu128" }]
torchvision = [{ index = "pytorch-cu128", extra = "cu128" }]
torchaudio = [{ index = "pytorch-cu128", extra = "cu128" }]
tcga-tools = { path = "../TCGA_TOOLS_2.0", editable = true }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
